--- a/src/components/form/registerForm/RegisterForm.css
+++ b/src/components/form/registerForm/RegisterForm.css
@@ -14,6 +14,9 @@
   width: 100%;
   height: 32px;
 }
+.MuiInputBase-multiline {
+  height: unset;
+}
 .register-error {
   color: red;
   font-size: 12px;
